# ymarks

./: README.md
client/: README.md
client/Chrome/: manifest.json
client/Chrome/options/: options.css  options.js
client/Chrome/popup/: ymarks.html  ymarks.js
client/Chrome/scripts/: background.js
client/WebExt/: manifest.json
client/WebExt/options/: options.html  options.js
client/WebExt/popup/: ymarks.html
client/WebExt/scripts/: background.js
client/webextension-polyfill/: package-lock.json  package.json
server/: CMakeLists.txt  COPYING  README.md  build.cmd  conanfile.txt  ymarks.db
server/sqlite3/sqlite-snapshot-201709211311/: Makefile.in  configure  rcver.vc  sqlite3.h  sqlite3rc.h  sqlite3res.lo  winsqlite3.exp  winsqlite3.ilk  winsqlite3.lib  winsqlite3shell.ilk
server/sqlite3/sqlite-snapshot-201709211311/tea/: configure
server/sqlite3/sqlite-snapshot-201709211311/tea/generic/: tclsqlite3.c
server/src/: backup.c  backup.h  constants.h  database.h  download.h  main.c  main.h  types.h  upload.h
